# marketplace

./: .$DataBase Model.bkp  DataBase Model
backend/: README.md  alembic.ini  main.py  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 7865c7cad82d_first_migrate.py
backend/models/: database.py  users.py
backend/routers/: posts.py  users.py
backend/schemas/: posts.py  users.py
backend/utils/: dependencies.py  posts.py  users.py
