[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Artur Dedovec <qurtexi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.85.0"}
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"
psycopg2-binary = "^2.9.3"
databases = {extras = ["asyncpg"], version = "^0.6.1"}
sqlalchemy-media = "^0.17.4"
SQLAlchemy-ImageAttach = "^1.1.0"
asyncpg = "^0.26.0"
fastapi-users = "^10.1.5"
graphene = "^3.1.1"
starlette-graphene3 = "^0.6.0"
jose = "^1.0.0"
email-validator = "^1.3.0"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
